# com.redhat.machine

./: .gitignore  Makefile.am  README.md  com.redhat.machine.spec  configure.ac  io.systemd.sysinfo.spec  meson.build
src/: com.redhat.machine.varlink  io.systemd.sysinfo.varlink  main.c  meson.build
